--- a/Clinic Website/Views/Daylist/Create.cshtml
+++ b/Clinic Website/Views/Daylist/Create.cshtml
@@ -41,5 +41,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to Clinic list ", "clinic",)*@
+
+    @Html.ActionLink("Back to Clinic list", "YourClinics", "clinics", new { },htmlAttributes:new { })
 </div>
