--- a/Clinic Website/Views/Account/Register.cshtml
+++ b/Clinic Website/Views/Account/Register.cshtml
@@ -1,77 +1,120 @@
-﻿
+﻿@{
+
+    Layout = null;
+}
+
 @model Clinic_Website.Models.RegisterViewModel
 @using Clinic_Website.Models
-@{
-    ViewBag.Title = "Register";
-}
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="container">
-        <h2>@ViewBag.Title.</h2>
+<head>
+    <!-- Required Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Page Title -->
+    <title>HealthCode</title>
 
-        @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-        {
-            @Html.AntiForgeryToken()
-            @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
-            <h4>Create New Account</h4>
-            <hr />
-            <div class="form-group">
-                @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.UserName, new { @class = " col-md-4 form-control" })
-                    @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="~/NewFolder/assets/images/logo/f564e696-315f-4d69-b104-9694c601b6d8_200x200.png" type="image/x-icon">
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.UserType, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.DropDownList("UserType", null, new { @class = " col-md-4 form-control" })
-                    @*@Html.DropDownListFor(m => m.UserType, ViewBag.UserType as SelectList, new { @class = "custom-select" })*@
-                    @Html.ValidationMessageFor(m => m.UserType, "", new { @class = "text-danger" })
-                </div>
-            </div>
+    <link rel="stylesheet" href="~/NewFolder/assets/css/bootstrap-4.1.3.min.css">
 
-            <div class="form-group">
-                @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.Email, new { @class = " col-md-4 form-control" })
-                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.TextBoxFor(m => m.PhoneNumber, new { @class = " col-md-4 form-control" })
-                    @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.Password, new { @class = " col-md-4 form-control" })
-                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-                <div class="col-md-10">
-                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = " col-md-4 form-control" })
-                    @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" class="btn btn-default" value="Register" />
-                </div>
-            </div>
+    <style>
+        body {
+            background: #f5f7fa;
         }
+    </style>
+</head>
+<body>
+    <!-- Preloader Starts -->
+    <div class="preloader">
+        <div class="spinner"></div>
     </div>
+    <!-- Preloader End -->
+
+    <div class="row BackgroundPhoto my-5 py-5" style="margin:0 auto; font-size:20px; ">
+        
+        <div class="container bg-white rounded border-1 shadow p-4">
+            <h2>@ViewBag.Title</h2>
+
+            @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                @*@Html.ValidationSummary("", new { @class = "text-danger" })*@
+                <h4>Create New Account</h4>
+                <hr />
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.UserName, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(m => m.UserName, new { @class = " col-md-4 form-control" })
+                        @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.UserType, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.DropDownList("UserType", null, new { @class = " col-md-4 form-control" })
+                        @*@Html.DropDownListFor(m => m.UserType, ViewBag.UserType as SelectList, new { @class = "custom-select" })*@
+                        @Html.ValidationMessageFor(m => m.UserType, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(m => m.Email, new { @class = " col-md-4 form-control" })
+                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = " col-md-4 form-control" })
+                        @Html.ValidationMessageFor(m => m.PhoneNumber, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.PasswordFor(m => m.Password, new { @class = " col-md-4 form-control" })
+                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
+                    <div class="col-md-8">
+                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = " col-md-4 form-control" })
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                   
+                        <input type="submit" class="btn btn-primary ml-2" value="Register" />
+                   
+                </div>
+            }
+        </div>
+
+        
+        </div>
+
+
+            <script src="~/NewFolder/assets/js/vendor/jquery-2.2.4.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/bootstrap-4.1.3.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/wow.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/owl-carousel.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/jquery.datetimepicker.full.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/jquery.nice-select.min.js"></script>
+            <script src="~/NewFolder/assets/js/vendor/superfish.min.js"></script>
+
+
+</body>
+</html>
+ 
