--- a/Clinic Website/Views/Clinics/Edit.cshtml
+++ b/Clinic Website/Views/Clinics/Edit.cshtml
@@ -40,6 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClinicImage, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
+                <img style="width:64px" src="~/Uploads/@Model.ClinicImage"/>
                 <input type="file" id="myImage" name="upload" />
                 @Html.ValidationMessageFor(model => model.ClinicImage, "", new { @class = "text-danger" })
             </div>
@@ -121,10 +122,7 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
+ 
     @section scriptsHere{
         <script>
             function storeLocation(position) {
